--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 wasm-bindgen = "0.2.78"
+base64 = "0.13.0"
 
 [dependencies.web-sys]
 version = "0.3.55"
