--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ crate-type = ["cdylib"]
 [dependencies]
 wasm-bindgen = "0.2.78"
 base64 = "0.13.0"
+image = "0.23.14"
 
 [dependencies.web-sys]
 version = "0.3.55"
