--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "./scripts/install-wasm-pack.sh && next build",
-    "start": "next start"
+    "build": "next build",
+    "start": "next start",
+    "prebuild": "wasm-pack build --out-name index && rm ./pkg/.gitignore"
   },
   "dependencies": {
     "next": "12.0.4",
