--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "prebuild": "wasm-pack build --out-name index && rm ./pkg/.gitignore"
+    "wasm": "wasm-pack build --out-name index && rm ./pkg/.gitignore"
   },
   "dependencies": {
     "next": "12.0.4",
