--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "wasm": "wasm-pack build --out-name index && rm ./pkg/.gitignore"
+    "wasm": "wasm-pack build --out-name index && rm ./pkg/.gitignore",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "12.0.4",
@@ -17,6 +18,7 @@
     "@types/react": "17.0.35",
     "@wasm-tool/wasm-pack-plugin": "^1.6.0",
     "autoprefixer": "^10.4.0",
+    "husky": "^7.0.4",
     "postcss": "^8.3.11",
     "tailwindcss": "^2.2.19",
     "typescript": "4.4.4"
